[package]
name = "securitytrails-rs"
version = "0.0.1"
authors = ["shellrow <81893184+shellrow@users.noreply.github.com>"]
edition = "2018"
description = "Rust bindings for SecurityTrails API"
repository = "https://github.com/shellrow/securitytrails-rs"
readme = "README.md"
keywords = ["osint","web","network","security","api"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
